--- a/case/放大镜/index.html
+++ b/case/放大镜/index.html
@@ -1,10 +1,86 @@
-<!DOCTYPE html>
-<html lang="en">
+
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<html xmlns="http://www.w3.org/1999/xhtml">
 <head>
-    <meta charset="UTF-8">
-    <title>$Title$</title>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
+    <title>矿天下 - 矿山设备详情</title>
+    <link href="css/share.css" rel="stylesheet">
+    <link href="css/style.css" rel="stylesheet">
+
+    <script type="text/javascript" src="js/jquery-1.10.min.js"></script>
+    <script type="text/javascript" src="js/jquery.jqzoom.js"></script>
+    <script type="text/javascript" src="js/base.js"></script>
 </head>
 <body>
-$END$
+
+<div class="index_wh">
+    <div class="center">
+        <div class="product_pape  fl">
+            <div id="preview" class="spec-preview">
+                <span class="jqzoom"><img jqimg="images/b1.jpg" src="images/s1.jpg" /></span>
+            </div>
+            <!--缩图开始-->
+            <div class="spec-scroll">
+                <a class="prev">&lt;</a>
+                <a class="next">&gt;</a>
+                <div class="items">
+                    <ul>
+                        <li><img class="xz" alt="佳能" bimg="images/b1.jpg" src="images/s1.jpg" onmousemove="preview(this);"></li>
+                        <li><img alt="佳能" bimg="images/b2.jpg" src="images/s2.jpg" onmousemove="preview(this);"></li>
+                        <li><img alt="佳能" bimg="images/b3.jpg" src="images/s3.jpg" onmousemove="preview(this);"></li>
+                        <li><img alt="佳能" bimg="images/b1.jpg" src="images/s1.jpg" onmousemove="preview(this);"></li>
+                        <li><img alt="佳能" bimg="images/b3.jpg" src="images/s3.jpg" onmousemove="preview(this);"></li>
+                        <li><img alt="佳能" bimg="images/b1.jpg" src="images/s1.jpg" onmousemove="preview(this);"></li>
+                        <li><img alt="佳能" bimg="images/b2.jpg" src="images/s2.jpg" onmousemove="preview(this);"></li>
+                        <li><img alt="佳能" bimg="images/b1.jpg" src="images/s1.jpg" onmousemove="preview(this);"></li>
+                        <li><img alt="佳能" bimg="images/b2.jpg" src="images/s2.jpg" onmousemove="preview(this);"></li>
+                        <li><img alt="佳能" bimg="images/b2.jpg" src="images/s2.jpg" onmousemove="preview(this);"></li>
+                        <li><img alt="佳能" bimg="images/b1.jpg" src="images/s1.jpg" onmousemove="preview(this);"></li>
+                        <li><img alt="佳能" bimg="images/b2.jpg" src="images/s2.jpg" onmousemove="preview(this);"></li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+
+        <div class="mspe_r fr">
+            <h4>混式磨合机</h4>
+            <dl class="mspe_r_ul">
+                <dt>
+                    <a href="" class="mspe_r_ulput1">在线咨询</a>
+                    <a href="" class="mspe_r_ulput4">收藏关注</a>
+                </dt>
+                <dd>
+                    <div class="ept_r_canshu"><span>公司简介：</span>说明拿样规则说明拿样规则</div>
+                    <div class="ept_r_canshu"><span>处理能力：</span>说明拿样规则说明拿样规则说明拿样</div>
+                    <div class="ept_r_canshu"><span>产品改进：</span>说明拿样规则说明拿样规则说明拿样规则说明拿样规则说明拿样规则说明拿样规则说明拿样规则说明拿样规则说明拿样规则说明拿样规则说明拿样规则说明拿样规则说明</div>
+                </dd>
+            </dl>
+            <div class="mspe_r_Price">价格：<b>￥70000</b></div>
+
+            <div class="qpnt_r_shuzhi">
+                <div class="fl">数量：</div>
+                <div class="qpnt_khh fl">
+                    <button type="button" name="btnSubmit" class="qpnt_button" id="reduce">—</button>
+                    <input type="text" name="shzhi" value="0" class="qpnt_khsz" onkeyup="this.value=this.value.replace(/[^\d.]/g,'')" onafterpaste="this.value=this.value.replace(/[^\d.]/g,'')">
+                    <button type="button" name="btnSubmit" class="qpnt_button" id="plus">+</button>
+                </div>
+            </div>
+
+            <div class="mspe_r_butn">
+                <button type="button" name="btnSubmit" class="mspe_button">我要采购</button>
+                <button type="button" name="btnSubmit" class="mspe_button">加入购物车</button>
+                <div class="mspe_r_share">
+                    <a href="" class="share-h">分享</a>
+                    <a href="" class="share-p" title="分享到微信"><img src="images/wx_03.png" alt="" /></a>
+                    <a href="" class="share-p" title="分享到QQ"><img src="images/qq_03.png" alt="" /></a>
+                </div>
+            </div>
+            <div class="mspe_r_telephone">全国24小时服务热线：<b>0791-111000</b></div>
+        </div>
+        <div class="clear"></div>
+    </div>
+</div>
+
 </body>
 </html>
